# agentdocx

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
.claude/: settings.local.json
mcp/agentdocx/: __init__.py  batch.py  comments.py  document.py  formatting.py  operations.py  oxml_helpers.py  server.py  track_changes.py
skill/: reference.md  skill.md
